<resources>
    <string name="app_name">Burra</string>
    <string name="google_maps_key">AIzaSyBlhU2ivtBBreQbydFqjMrYCGhKEMny4lQ</string>
    <string name="google_maps_key_apk"> AIzaSyARWrqv-aQCtBwJMJXtqS10_jr34U9xkZY </string>
    <string name="desayuno">Desayuno</string>
    <string name="almuerzo">Almuerzo</string>
    <string name="cena">Cena</string>
    <string name="turno">Turno</string>
    <string name="area1">Area 1</string>
    <string name="area2">Area 2</string>
</resources>
